<resources>
    <string name="app_name">NavigationComponent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_next">PROXIMO</string>
    <string name="fragmento_arquivo">Fragmento Arquivo</string>
    <string name="text_end">FIM</string>
    <string name="fragmento_recibo">Fragmento Recibo</string>
    <string name="texto_acionar">AÇÃO</string>
    <string name="login_action_bar_title">Login</string>
    <string name="texto_button_confirmar">CONFIRMAR</string>
    <string name="texto_button_retornar">RETORNAR</string>
    <string name="texto_campoLayout_senha">Senha</string>
    <string name="texto_campoLayout_login">Login</string>
    <string name="texto_error_invalid_username">Usuário Inválido</string>
    <string name="texto_error_invalid_password">Senha Inválida</string>
    <string name="texto_nomeUsuario">Bem vindo, %1$s</string>
    <string name="titulo_arquivo_data_actionBar">Arquivo Data</string>
    <string name="nome_hint_layout_entrada_arquivoData">Nome</string>
    <string name="bio_hint_layout_entrada_arquivoData">Bio</string>
    <string name="nome_invalido_layout_entrada_arquivoData">Nome inválido</string>
    <string name="bio_invalida_layout_entrada_arquivoData">Bio inválida</string>
    <string name="titulo_credenciais_actionBar">Credenciais</string>
    <string name="username_hint_layout_entrada_credenciais">Nome do usuário</string>
    <string name="password_hint_layout_entrada_credenciais">Senha</string>
    <string name="username_invalido_layout_entrada_credenciais">Nome de usuário inválido</string>
    <string name="password_invalido_layout_entrada_credenciais">Semha inválida</string>
    <string name="texto_credenciais_name">%1$s, Troque suas credenciais</string>

</resources>