<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".iu.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entrada_layoutCampo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_campoLayout_login"
        android:theme="@style/AppTextInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/entrada_campo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entrada_layoutCampo_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/texto_campoLayout_senha"
        android:theme="@style/AppTextInputLayout">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/entrada_campo_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_confirma"
        style="@style/AppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/texto_button_confirmar" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login_retorna"
        style="@style/AppButton.Retorna"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/texto_button_retornar" />


</LinearLayout>