<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".iu.arquivoDeRegistro.registro.ArquivoDataFragmento">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entrada_name_layout_arquivoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_hint_layout_entrada_arquivoData">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/entrada_name_arquivoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/entrada_bio_layout_arquivoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/bio_hint_layout_entrada_arquivoData">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/entrada_bio_arquivoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botao_proximo_arquivoData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_next" />

</LinearLayout>